created transfer saga

--- a/deployments/BUILD.bazel
+++ b/deployments/BUILD.bazel
@@ -9,6 +9,7 @@ load(
 
 DOCKERIZED_IMAGES = {
     "bank/accounts:accounts": "//build/package:accounts",
+    "bank/transfers:transfers": "//build/package:transfers",
 }
 
 container_bundle(
